fix(sidebar): made it no longer push all the other elements to the right when collapsed

--- a/src/components/side-panel/side-panel.scss
+++ b/src/components/side-panel/side-panel.scss
@@ -14,6 +14,7 @@
   width: 60px;
 
   &.collapsed {
+    position: fixed;
     background: transparent;
     border-right: none;
     backdrop-filter: none;
